# libSLM

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.rst  main.cpp  setup.py
App/: Header.h  Iterator.cpp  Iterator.h  Layer.cpp  Layer.h  Model.cpp  Model.h  Reader.cpp  Reader.h  Slm.cpp  Slm.h  Utils.cpp  Utils.h  Writer.cpp  Writer.h
Python/: __init__.py  module.cpp  utils.h
Python/translators/: __init__.py
cMake/: UseLibPack.cmake
conda.recipe/: meta.yaml
docs/: cmake_example.rst  index.rst
python/libSLM/: module.cpp  utils.h
python/libSLM/translators/: __init__.py
tests/: test.py
